--- a/index.html
+++ b/index.html
@@ -50,42 +50,50 @@
 
           <div class="ques_ans">
             <div class="ques">
-              <h3 class="ques_title">How many team members can I invite?</h3>
+              <h3 class="ques_title">
+                What is the maximum file upload size?
+              </h3>
               <img src="images/icon-arrow-down.svg" alt="down arrow to open question accordion">
             </div>
 
-            <p class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on
-              team members for the Premium plan.</p>
+            <p class="answer">
+              No more than 2GB. All files in your account must fit your allotted storage space.
+            </p>
           </div>
 
           <div class="ques_ans">
             <div class="ques">
-              <h3 class="ques_title">How many team members can I invite?</h3>
+              <h3 class="ques_title">
+                How do I reset my password?
+              </h3>
               <img src="images/icon-arrow-down.svg" alt="down arrow to open question accordion">
             </div>
 
-            <p class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on
-              team members for the Premium plan.</p>
+            <p class="answer">
+              Click “Forgot password” from the login page or “Change password” from your profile page.
+              A reset link will be emailed to you.
+            </p>
           </div>
 
           <div class="ques_ans">
             <div class="ques">
-              <h3 class="ques_title">How many team members can I invite?</h3>
+              <h3 class="ques_title"> Can I cancel my subscription?
+              </h3>
               <img src="images/icon-arrow-down.svg" alt="down arrow to open question accordion">
             </div>
 
-            <p class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on
-              team members for the Premium plan.</p>
+            <p class="answer"> Yes! Send us a message and we’ll process your request no questions asked.</p>
           </div>
 
           <div class="ques_ans">
             <div class="ques">
-              <h3 class="ques_title">How many team members can I invite?</h3>
+              <h3 class="ques_title"> Do you provide additional support?
+              </h3>
               <img src="images/icon-arrow-down.svg" alt="down arrow to open question accordion">
             </div>
 
-            <p class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on
-              team members for the Premium plan.</p>
+            <p class="answer">Chat and email support is available 24/7. Phone lines are open during normal business
+              hours.</p>
           </div>
       </article>
     </section>
