resolved accessibility issues

--- a/index.html
+++ b/index.html
@@ -24,23 +24,21 @@
 </head>
 
 <body>
-
-  <main>
-    <section class="main_container flex">
-      <div class="image_container">
+    <main class="main_container flex">
+      <section class="image_container">
         <div class="image_wrapper_inner">
-          <!-- <img class="img-woman" src="images/illustration-woman-online-desktop.svg" alt="Illustration women image" role="img"> -->
+          <!-- <img class="img-woman" src="images/illustration-woman-online-desktop.svg" alt="Illustration women image"> -->
         </div>
-        <img class="box" src="images/illustration-box-desktop.svg" alt="Illustration: Box Image" role="img">
-      </div>
+        <img class="box" src="images/illustration-box-desktop.svg" alt="Illustration: Box Image">
+      </section>
 
-      <article class="faq">
+      <section class="faq">
         <h1>FAQ</h1>
 
-        <section class="accordion">
+        <div class="accordion">
           <div class="ques_ans">
             <div class="ques">
-              <h3 class="ques_title">How many team members can I invite?</h3>
+              <h2 class="ques_title">How many team members can I invite?</h2>
               <img src="images/icon-arrow-down.svg" alt="down arrow to open question accordion">
             </div>
 
@@ -50,9 +48,9 @@
 
           <div class="ques_ans">
             <div class="ques">
-              <h3 class="ques_title">
+              <h2 class="ques_title">
                 What is the maximum file upload size?
-              </h3>
+              </h2>
               <img src="images/icon-arrow-down.svg" alt="down arrow to open question accordion">
             </div>
 
@@ -63,9 +61,9 @@
 
           <div class="ques_ans">
             <div class="ques">
-              <h3 class="ques_title">
+              <h2 class="ques_title">
                 How do I reset my password?
-              </h3>
+              </h2>
               <img src="images/icon-arrow-down.svg" alt="down arrow to open question accordion">
             </div>
 
@@ -77,8 +75,8 @@
 
           <div class="ques_ans">
             <div class="ques">
-              <h3 class="ques_title"> Can I cancel my subscription?
-              </h3>
+              <h2 class="ques_title"> Can I cancel my subscription?
+              </h2>
               <img src="images/icon-arrow-down.svg" alt="down arrow to open question accordion">
             </div>
 
@@ -87,17 +85,21 @@
 
           <div class="ques_ans">
             <div class="ques">
-              <h3 class="ques_title"> Do you provide additional support?
-              </h3>
+              <h2 class="ques_title"> Do you provide additional support?
+              </h2>
               <img src="images/icon-arrow-down.svg" alt="down arrow to open question accordion">
             </div>
 
             <p class="answer">Chat and email support is available 24/7. Phone lines are open during normal business
               hours.</p>
           </div>
-      </article>
-    </section>
-  </main>
+        </div>
+      </section>
+    </main>
+    <footer class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/saurabhisdev">Saurabh Singh</a>.
+    </footer>
   <script src="index.js"></script>
 </body>
 
